# kodamapub

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.e2e.yaml  compose.prod.yaml  compose.yaml  docker-bake.hcl  mise.toml
.github/workflows/: e2e-mastodon.yaml  publish-images.yaml
apps/web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  vite.config.ts
apps/web/public/: site.webmanifest
apps/web/server/: index.ts
apps/web/src/: api.ts  app.tsx  main.tsx  styles.css  types.ts
crates/activitypub/: Cargo.toml
crates/activitypub/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20260505120000_initial.sql  20260505220000_follows_and_delivery_jobs.sql  20260505230000_inbox_dedup.sql  20260505233000_local_auth.sql  20260505240000_login_sessions_csrf.sql
crates/db/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/edge/: Cargo.toml
crates/edge/src/: main.rs
crates/job/: Cargo.toml
crates/job/src/: lib.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: mastodon-kind-e2e.md
docs/spec/: url.md
scripts/ci/: mastodon-e2e.sh
scripts/docker/: cli-job.Dockerfile  edge.Dockerfile  mastodon-proxy.conf  server.Dockerfile  web.Dockerfile
scripts/kind/: mastodon-e2e.sh
scripts/reference/: install.sh
