[package]
name = "kodamapub-activitypub"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kodamapub-domain.workspace = true

anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
http.workspace = true
pem.workspace = true
reqwest.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
