[package]
name = "kodamapub-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "kodamapub"
path = "src/main.rs"

[dependencies]
kodamapub-activitypub.workspace = true
kodamapub-db.workspace = true
kodamapub-domain.workspace = true
kodamapub-job.workspace = true

anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
url.workspace = true
