[package]
name = "kodamapub-job"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kodamapub-activitypub.workspace = true
kodamapub-db.workspace = true
kodamapub-domain.workspace = true

anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
