[package]
name = "kodamapub-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "kodamapub-server"
path = "src/main.rs"

[dependencies]
kodamapub-activitypub.workspace = true
kodamapub-db.workspace = true
kodamapub-domain.workspace = true
kodamapub-job.workspace = true
kodamapub-media.workspace = true

anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
config.workspace = true
dotenvy.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
